// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all exports 1`] = `
Object {
  "API_RESPONSE_CREDENTIALS_COUNT": "count",
  "API_RESPONSE_CREDENTIALS_RESULTS": "results",
  "API_RESPONSE_CREDENTIAL_CRED_TYPE": "cred_type",
  "API_RESPONSE_CREDENTIAL_ID": "id",
  "API_RESPONSE_CREDENTIAL_NAME": "name",
  "API_RESPONSE_JOBS_RESULTS": "results",
  "API_RESPONSE_SCANS_COUNT": "count",
  "API_RESPONSE_SCANS_RESULTS": "results",
  "API_RESPONSE_SOURCES_COUNT": "count",
  "API_RESPONSE_SOURCES_RESULTS": "results",
  "API_RESPONSE_SOURCE_CREDENTIALS": "credentials",
  "API_RESPONSE_SOURCE_CREDENTIALS_ID": "id",
  "API_RESPONSE_SOURCE_HOSTS": "hosts",
  "API_RESPONSE_SOURCE_ID": "id",
  "API_RESPONSE_SOURCE_NAME": "name",
  "API_RESPONSE_SOURCE_OPTIONS": "options",
  "API_RESPONSE_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
  "API_RESPONSE_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
  "API_RESPONSE_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
  "API_RESPONSE_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
  "API_RESPONSE_SOURCE_PORT": "port",
  "API_RESPONSE_SOURCE_SOURCE_TYPE": "source_type",
  "API_SUBMIT_SOURCE_CREDENTIALS": "credentials",
  "API_SUBMIT_SOURCE_HOSTS": "hosts",
  "API_SUBMIT_SOURCE_ID": "id",
  "API_SUBMIT_SOURCE_NAME": "name",
  "API_SUBMIT_SOURCE_OPTIONS": "options",
  "API_SUBMIT_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
  "API_SUBMIT_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
  "API_SUBMIT_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
  "API_SUBMIT_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
  "API_SUBMIT_SOURCE_PORT": "port",
  "API_SUBMIT_SOURCE_SOURCE_TYPE": "source_type",
  "apiTypes": Object {
    "API_RESPONSE_CREDENTIALS_COUNT": "count",
    "API_RESPONSE_CREDENTIALS_RESULTS": "results",
    "API_RESPONSE_CREDENTIAL_CRED_TYPE": "cred_type",
    "API_RESPONSE_CREDENTIAL_ID": "id",
    "API_RESPONSE_CREDENTIAL_NAME": "name",
    "API_RESPONSE_JOBS_RESULTS": "results",
    "API_RESPONSE_SCANS_COUNT": "count",
    "API_RESPONSE_SCANS_RESULTS": "results",
    "API_RESPONSE_SOURCES_COUNT": "count",
    "API_RESPONSE_SOURCES_RESULTS": "results",
    "API_RESPONSE_SOURCE_CREDENTIALS": "credentials",
    "API_RESPONSE_SOURCE_CREDENTIALS_ID": "id",
    "API_RESPONSE_SOURCE_HOSTS": "hosts",
    "API_RESPONSE_SOURCE_ID": "id",
    "API_RESPONSE_SOURCE_NAME": "name",
    "API_RESPONSE_SOURCE_OPTIONS": "options",
    "API_RESPONSE_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
    "API_RESPONSE_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
    "API_RESPONSE_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
    "API_RESPONSE_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
    "API_RESPONSE_SOURCE_PORT": "port",
    "API_RESPONSE_SOURCE_SOURCE_TYPE": "source_type",
    "API_SUBMIT_SOURCE_CREDENTIALS": "credentials",
    "API_SUBMIT_SOURCE_HOSTS": "hosts",
    "API_SUBMIT_SOURCE_ID": "id",
    "API_SUBMIT_SOURCE_NAME": "name",
    "API_SUBMIT_SOURCE_OPTIONS": "options",
    "API_SUBMIT_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
    "API_SUBMIT_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
    "API_SUBMIT_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
    "API_SUBMIT_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
    "API_SUBMIT_SOURCE_PORT": "port",
    "API_SUBMIT_SOURCE_SOURCE_TYPE": "source_type",
  },
  "default": Object {
    "API_RESPONSE_CREDENTIALS_COUNT": "count",
    "API_RESPONSE_CREDENTIALS_RESULTS": "results",
    "API_RESPONSE_CREDENTIAL_CRED_TYPE": "cred_type",
    "API_RESPONSE_CREDENTIAL_ID": "id",
    "API_RESPONSE_CREDENTIAL_NAME": "name",
    "API_RESPONSE_JOBS_RESULTS": "results",
    "API_RESPONSE_SCANS_COUNT": "count",
    "API_RESPONSE_SCANS_RESULTS": "results",
    "API_RESPONSE_SOURCES_COUNT": "count",
    "API_RESPONSE_SOURCES_RESULTS": "results",
    "API_RESPONSE_SOURCE_CREDENTIALS": "credentials",
    "API_RESPONSE_SOURCE_CREDENTIALS_ID": "id",
    "API_RESPONSE_SOURCE_HOSTS": "hosts",
    "API_RESPONSE_SOURCE_ID": "id",
    "API_RESPONSE_SOURCE_NAME": "name",
    "API_RESPONSE_SOURCE_OPTIONS": "options",
    "API_RESPONSE_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
    "API_RESPONSE_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
    "API_RESPONSE_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
    "API_RESPONSE_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
    "API_RESPONSE_SOURCE_PORT": "port",
    "API_RESPONSE_SOURCE_SOURCE_TYPE": "source_type",
    "API_SUBMIT_SOURCE_CREDENTIALS": "credentials",
    "API_SUBMIT_SOURCE_HOSTS": "hosts",
    "API_SUBMIT_SOURCE_ID": "id",
    "API_SUBMIT_SOURCE_NAME": "name",
    "API_SUBMIT_SOURCE_OPTIONS": "options",
    "API_SUBMIT_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
    "API_SUBMIT_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
    "API_SUBMIT_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
    "API_SUBMIT_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
    "API_SUBMIT_SOURCE_PORT": "port",
    "API_SUBMIT_SOURCE_SOURCE_TYPE": "source_type",
  },
}
`;

exports[`default export 1`] = `
Object {
  "API_RESPONSE_CREDENTIALS_COUNT": "count",
  "API_RESPONSE_CREDENTIALS_RESULTS": "results",
  "API_RESPONSE_CREDENTIAL_CRED_TYPE": "cred_type",
  "API_RESPONSE_CREDENTIAL_ID": "id",
  "API_RESPONSE_CREDENTIAL_NAME": "name",
  "API_RESPONSE_JOBS_RESULTS": "results",
  "API_RESPONSE_SCANS_COUNT": "count",
  "API_RESPONSE_SCANS_RESULTS": "results",
  "API_RESPONSE_SOURCES_COUNT": "count",
  "API_RESPONSE_SOURCES_RESULTS": "results",
  "API_RESPONSE_SOURCE_CREDENTIALS": "credentials",
  "API_RESPONSE_SOURCE_CREDENTIALS_ID": "id",
  "API_RESPONSE_SOURCE_HOSTS": "hosts",
  "API_RESPONSE_SOURCE_ID": "id",
  "API_RESPONSE_SOURCE_NAME": "name",
  "API_RESPONSE_SOURCE_OPTIONS": "options",
  "API_RESPONSE_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
  "API_RESPONSE_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
  "API_RESPONSE_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
  "API_RESPONSE_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
  "API_RESPONSE_SOURCE_PORT": "port",
  "API_RESPONSE_SOURCE_SOURCE_TYPE": "source_type",
  "API_SUBMIT_SOURCE_CREDENTIALS": "credentials",
  "API_SUBMIT_SOURCE_HOSTS": "hosts",
  "API_SUBMIT_SOURCE_ID": "id",
  "API_SUBMIT_SOURCE_NAME": "name",
  "API_SUBMIT_SOURCE_OPTIONS": "options",
  "API_SUBMIT_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
  "API_SUBMIT_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
  "API_SUBMIT_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
  "API_SUBMIT_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
  "API_SUBMIT_SOURCE_PORT": "port",
  "API_SUBMIT_SOURCE_SOURCE_TYPE": "source_type",
}
`;
